finished cleaning up styles for three featured projects

--- a/atlantis.html
+++ b/atlantis.html
@@ -32,9 +32,9 @@
     <div id="nav"></div>
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	<div class="title-wrapper animate-reveal animate-first">
-  	<div class="page-title">Atlantis Hub</div>
+  	<div class="header">Atlantis Hub</div>
   	<div class="last"> <div class="short-divider"></div></div>
-  	<div class="project-info">
+  	<div class="subheader-2">
   		Fall 2017 • Interaction Design Overview • <a href="https://www.youtube.com/watch?v=gH_H0uQTa00&feature=youtu.be" target="_blank">Video</a>
   	</div>
   	</div>
@@ -43,7 +43,7 @@
   	<div id="atlantis" class="margin-medium">
 	  	<div class="content">
 			<div class="context-summary">
-				<div class="context-title">Context</div>
+				<div class="subheader-2">Context</div>
 				I worked on this project through, Interaction Design Overview (IxDO), a core class of the HCI minor.
 				<p>Given a spreadsheet of unorganized raw data and personas of users and stakeholders, we were tasked with designing an environmental display featuring information about planes, trains, and ferries. The project followed an iterative design process that was centered around analyzing stakeholder and user needs. 
 				<p>We moved from hand-drawn sketches to digital drawings and finally incorporated color into the design. The last step was to integrate animation into the design to take advantage of the display’s capability to show different types of data.</p>
@@ -52,15 +52,15 @@
 			</div>
 			
 			<div class="context-specifics">
-				<div class="context-subtitle">Team</div>
+				<div class="subheader-2">Team</div>
 					<div class="context-description">
 					This was an individual project.
 					</div>
-				<div class="context-subtitle">Skills</div>
+				<div class="subheader-2">Skills</div>
 					<div class="context-description">
 					Information architecture, Data analysis, Wireframing, Typography, Visual Design
 					</div>
-				<div class="context-subtitle">Tools</div> 
+				<div class="subheader-2">Tools</div> 
 					<div class="context-description">
 					Adobe Photoshop, Keynote
 					</div>
