--- a/chutzpow.html
+++ b/chutzpow.html
@@ -31,9 +31,9 @@
     <meta name="viewport" content="width=device-width">
     <div id="nav"></div>
   	<div class="title-wrapper animate-reveal animate-first">
-  	<div class="page-title">Chutz-Pow!</div>
+  	<div class="header">Chutz-Pow!</div>
   	<div class="last"> <div class="short-divider"></div></div>
-  	<div class="project-info">
+  	<div class="subheader-2">
   		Spring 2018 • Information Systems Consulting Project • <a href="http://www.chutz-pow.org" target="_blank" ">Website</a>
   	</div>
   	</div>
@@ -47,7 +47,7 @@
 	  	<div class="content">
 			
 			<div class="context-summary">
-			<div class="context-title">Context</div>
+			<div class="subheader-2">Context</div>
 			Every IS major takes the Information Systems Consulting Project course during their Junior Spring. Through this course, students design and implement a usable information system for a client. My team worked with The Holocaust Center of Pittsburgh. 
 			<p>Located in Greenfield, the Holocaust Center is a multi-purpose hub for education, events, art, and more. Its mission is to inspire engagement with the history of the Holocaust and to connect with it today. </p> 
 			<p>The Holocaust Center does not lack of programs; rather, they lack a platform to connect these programs. They want students to be able to engage with the material before, during, and after their visit, and they want teachers to be able to explore different perspectives when teaching about the Holocaust. Additionally, the Holocaust Center wants to be a resource both for people who visit in-person but also for those who cannot visit at all.</p>
@@ -55,15 +55,15 @@
 			</div>
 			
 			<div class="context-specifics">
-				<div class="context-subtitle">Team</div>
+				<div class="subheader-2">Team</div>
 				<div class="context-description">
 				I worked with two other IS juniors: Kenny Cohen and Sean Park. I took on the role of UX Designer and Frontend Engineer, Kenny served as the scrum master and Full Stack Developer, and Sean was the designer of the platform’s structure and core experience as well as a Full Stack Developer
 				</div>
-				<div class="context-subtitle">Skills</div> 
+				<div class="subheader-2">Skills</div> 
 				<div class="context-description">
 				Building Client Relationships, Project Management, Agile Development Methodology, Wireframing, Prototyping, Development
 				</div>
-				<div class="context-subtitle">Tools/Technology</div> 
+				<div class="subheader-2">Tools/Technology</div> 
 				<div class="context-description">Adobe XD, Ruby on Rails, HTML/CSS, JavaScript</div>
 			</div>
 			
