--- a/justharvest.html
+++ b/justharvest.html
@@ -34,9 +34,9 @@
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	
 	  	<div class="title-wrapper animate-reveal animate-first">
-	  	<div class="page-title">Community Table</div>
+	  	<div class="header">Community Table</div>
 	  	<div class="last"> <div class="short-divider"></div></div>
-	  	<div class="project-info">Spring 2019 • Service Design </div>
+	  	<div class="subheader-2">Spring 2019 • Service Design </div>
 	  	</div>
 	  	<img src="pics/justharvest/cover.jpg" class="big-pic animate-reveal animate-first">
 
@@ -45,7 +45,7 @@
 	  	<div class="content"> 
 			
 			<div class="context-summary">
-				<div class="context-title">Context</div> 
+				<div class="subheader-2">Context</div> 
 					<p>
 					I worked on this project through Service Design, an elective class in the HCI program. In this class, we learned to define and study services and data-driven product service systems and the basics of envisioning and designing them. The class culminated in a final client project. We partnered with <a href="https://www.justharvest.org/">Just Harvest</a>, a local nonprofit that works to fight hunger in Allegheny County through advocacy, education, and community outreach.</p>
 					<p>
@@ -54,11 +54,11 @@
 			</div>
 			
 			<div class="context-specifics">
-				<div class="context-subtitle">Team</div>
+				<div class="subheader-2">Team</div>
 					<div class="context-description">
 						I worked on a multi-disciplinary team of 5: the four other students were pursuing master degrees either in the HCI program and Integrated Innovation Institute
 					</div>
-				<div class="context-subtitle">Skills/Tools</div> 
+				<div class="subheader-2">Skills/Tools</div> 
 					<div class="context-description">
 						User Research, Storyboarding, Conceptual Modeling, Value Flows, Service Blueprinting, Stakeholder Mapping, Service Enactment (Experience Prototyping)
 					</div>
