--- a/l&d.html
+++ b/l&d.html
@@ -3,10 +3,10 @@
 
   <head>
     <title>Emily Porat | L&D Portal</title>
-    <link rel="stylesheet" type="text/css" href="styles/global2.css">
+    <link rel="stylesheet" type="text/css" href="styles/global.css">
+    <link rel="stylesheet" type="text/css" href="styles/global-mobile.css">
     <link rel="stylesheet" type="text/css" href="styles/nav.css">
     <link rel="stylesheet" type="text/css" href="styles/l&d.css">
-    <link rel="stylesheet" type="text/css" href="styles/contact.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="pics/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -34,9 +34,9 @@
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	
 	  	<div class="title-wrapper animate-reveal animate-first">
-		  	<div class="page-title">Learning & Development Portal</div>
+		  	<div class="header">Learning & Development Portal</div>
 		  	<div class="last"> <div class="short-divider"></div></div>
-		  	<div class="project-info">
+		  	<div class="subheader-2 center">
 		  		Summer 2018 • Deloitte Digital Summer Internship 
 		  	</div>
 	  	</div>
@@ -45,7 +45,7 @@
 
 	  	<div class="content">
 			<div class="context-summary">
-			<div class="context-title">Context</div>
+			<div class="subheader-2">Context</div>
 				During my summer at <a href="https://www.deloittedigital.com/">Deloitte Digital</a> as a UX Design Intern, I redesigned the Learning and Development Portal: a website through which Deloitte Digital practitioners can request to attend external continuing education (CED) opportunities such as conferences and trainings.
 				<p>
 				I had full ownership over this project: I created my own project plan and timeline, I decided what methods and tools I wanted to use and learn, and I headed all the group efforts that went into the project.
@@ -60,26 +60,26 @@
 			</div>
 			
 			<div class="context-specifics">
-				<div class="context-subtitle">Team</div>
+				<div class="subheader-2">Team</div>
 					<div class="context-description">
 					The Learning team is made up of three others: a product manager, project manager, and senior manager.</div>
-				<div class="context-subtitle">Skills</div> 
+				<div class="subheader-2">Skills</div> 
 					<div class="context-description">Heuristic Evaluation, Interviewing, Usability Testing, Affinity Mapping, Product Visioning, Personas, User Stories, Business Process Modeling, Information Architecture, Wireframing, Prototyping, Presenting</div>
-				<div class="context-subtitle">Tools</div> 
+				<div class="subheader-2">Tools</div> 
 					<div class="context-description">Adobe InDesign, Sketch, InVision, PowerPoint, A lot of sticky notes</div>
 			</div>
 	  	</div>
 
-	  	<div id="secondary-pics">
-			<img class="pics-2" src="pics/l&d/faq.jpg">
-			<img class="pics-2" src="pics/l&d/expenses.jpg">
-		</div>
+<!-- 	  	<div>
+			<img style="width: 40%; display: inline-block" src="pics/l&d/faq.jpg">
+			<img style="width: 40%; display: inline-block" src="pics/l&d/expenses.jpg">
+		</div> -->
 
 		<div class="panel last"> <div class="divider"></div> </div>
 
 	  	<div class="panel">
-	  	<div class="subtitle-left">Process</div>
-	  	<div class="text-right">
+	  	<div class="subheader-3 left">Process</div>
+	  	<div class="body right">
 	  		I followed the classic double-diamond process for this 6-week project, splitting each phase into roughly a two-week sprint. 
 	  		<p>In the 'Discover' phase, I did a Heuristic Evaluation of the existing portal and conducted 20 interviews and 2 usability tests with users and stakeholders.</p> 
 	  		<p>In 'Define,' I worked with a team to create an Affinity Map from nearly 400 statements gathered from research. We also completed a product visioning session, and I created personas and prioritized user stories. </p>
@@ -91,8 +91,8 @@
 	  	<div class="panel last"> <div class="divider"></div> </div>
 
 	  	<div class="panel">
-		<div class="subtitle-left">Heuristic Evaluation</div>
-		 	<div class="text-right">
+		<div class="subheader-3 left">Heuristic Evaluation</div>
+		 	<div class="body right">
 		  	My first step in understanding the existing portal (and ripping it to shreds) was to evaluate it based on <a href="https://www.nngroup.com/articles/ten-usability-heuristics/">Nielsen's ten heuristics for usability</a>. Going through this process helped me pick apart major issues with the site and allowed me to familiarize myself with its features so I was better prepared going into interviews. 
 		  	<p>I started by printing out all the pages I want to evaluate and circling features or functionality that seemed flawed. I then went back through and categorized each flaw. View the full report <a href="pics/l&d/heuristiceval.pdf">here</a>.</p>
 		  	<img src="pics/l&d/heuristic2.jpeg" class="pic-right">
@@ -102,8 +102,8 @@
 		<div class="panel last"> <div class="divider"></div> </div>
 
 		<div class="panel">
-		<div class="subtitle-left">Interviews</div>
-		<div class="text-right">
+		<div class="subheader-3 left">Interviews</div>
+		<div class="body right">
 			Before speaking to anyone, I determined who I needed to talk to in order to cover all potential user and stakeholder groups and created a <a href="pics/l&d/interview-script.pdf">script</a>. I divided the specific questions into general categories - Continuing Education, Approval Process, and Existing Portal. I knew it was important not to constrain myself by rigorously following a list of questions during interviews, so I used them as a starting off point and allowed the interviews to feel more like conversations. 
 			<p>Throughout one week, I interviewed 20 individuals: 9 requesters, 5 approvers, 3 administrators, 2 developers, and 1 talent representative.
 			</p>
@@ -118,8 +118,8 @@
 		<div class="panel last"> <div class="divider"></div> </div>
 
 		<div class="panel">
-		<div class="subtitle-left">Initial Usability Testing</div>
-		<div class="text-right">
+		<div class="subheader-3 left">Initial Usability Testing</div>
+		<div class="body right">
 			I didn't want to spend too much time testing the existing system because I anticipated completely starting from scratch, so I only did usability testing with two people. I also created a <a href="pics/l&d/usability-script.pdf">script</a> in preparation, and what I observed helped me gain a better understanding of some of the pain points. Below are screens from the original site that users were navigating.
   			<img class="pic-right" src="pics/l&d/initial-landing.png">
   			This first picture is the landing page, which has several separate tables below the visible one and lots of redundant information.
@@ -131,8 +131,8 @@
 		<div class="panel last"> <div class="divider"></div> </div>
 
 		<div class="panel">
-		<div class="subtitle-left">Affinity Mapping</div>
-		<div class="text-right">
+		<div class="subheader-3 left">Affinity Mapping</div>
+		<div class="body right">
 			In order to identify underlying needs and perspectives among the diverse group of interviewees, I led a team of UX designers and Product Managers in extracting salient points from the interviews into almost 400 individual user notes. Each individual note constitutes a single belief, experience, opinion, concern or need.
 			<p>
 			In total, we identified six top-level categories that highlight user needs and perspectives in a way that informs product development:
@@ -161,8 +161,8 @@
 		<div class="panel last"> <div class="divider"></div> </div>
 
 		<div class="panel">
-		<div class="subtitle-left">Personas</div>
-		<div class="text-right">
+		<div class="subheader-3 left">Personas</div>
+		<div class="body right">
 			From the numerous interview subjects, four categories stuck out: Requesters, Approvers, Administrators, and Leadership. Each has a distinct role and goals:
 			<div class="panel last"> <div class="divider"></div> </div>
 			<b>Alex | Requester | UX Designer at Deloitte Digital | <a href="pics/l&d/Alex.pdf">Full Profile</a></b>
@@ -190,8 +190,8 @@
 		<div class="panel last"> <div class="divider"></div> </div>
 
 		<div class="panel">
-		<div class="subtitle-left">Product Visioning Session</div>
-		<div class="text-right">
+		<div class="subheader-3 left">Product Visioning Session</div>
+		<div class="body right">
 			
 			Having synthesized most of the qualitative data, the next step was to create a broad vision for the portal in order to brainstorm and prioritize specific features - this was my way of bridging the gap between research and design.
 
@@ -218,8 +218,8 @@
 		<div class="panel last"> <div class="divider"></div> </div>
 
 		<div class="panel">
-		<div class="subtitle-left">User Stories</div>
-		<div class="text-right">
+		<div class="subheader-3 left">User Stories</div>
+		<div class="body right">
 		  
 			The next logical step was to create prioritized user stories for each user group. View the full document <a href="">here.</a>  
 		  	
@@ -231,8 +231,8 @@
 		<div class="panel last"> <div class="divider"></div> </div>
 
 		<div class="panel">
-		<div class="subtitle-left">Business Process Modeling</div>
-		<div class="text-right">
+		<div class="subheader-3 left">Business Process Modeling</div>
+		<div class="body right">
 			The current approval process is a one-size-fits all process that is in no way tailored to the request or user. So, an essential piece of this portal redesign was also redesigning the underlying process behind the portal. I started by breaking up the process into two user groups, by practitioner level: Analysts - Senior Consultants, and Managers and above. At the Manager level, it is likely that your counselor is an administrator, which creates redundancies. 
 			<p>The second big divide that needed to be addressed was cost - inexpensive requests like a $10 online course should not have to go through several levels of approval, rather, they can be auto-approved if the practitioner is below a certain threshold. I took these issues, as well as several other factors, when creating the flows below.</p>
 		</div>
@@ -244,8 +244,8 @@
 		</div>
 
 		<div class="panel">
-		<div class="subtitle-left">Wireframes</div>
-		<div class="text-right">
+		<div class="subheader-3 left">Wireframes</div>
+		<div class="body right">
 			
 			There are three separate levels of unique screens. Shown is my initial brainstorm for the requester landing page.
 			<p>Requester:</p>
@@ -273,13 +273,13 @@
 		  	</div>
 
 		<div class="panel">
-		<div class="subtitle-left">Visual Design</div>
+		<div class="subheader-3 left">Visual Design</div>
 			
-			<div class="text-right">
+			<div class="body right">
 			After incorporating feedback from usability testing, I moved on to visual design. I used Deloitte Digital branding, so I created a simplified style guide based on the lengthy existing style guide. 
 			<img src="pics/l&d/style-guide.jpg" class="pic-right">
 			<p>
-			I only had a few days for visual, so I only completed the requester screens, but I worked through several iterations and had a senior designer review my work. View all the requester screens <a href="pics/l&d/requester.pdf">here</a> and all the approver screens <a href="pics/l&d/approver.pdf">here</a>! 
+			I only had a few days to work on the style guide and visual design, so I only completed the requester screens, but I worked through several iterations and had a senior designer review my work. View all the requester screens <a href="pics/l&d/requester.pdf">here</a> and all the approver screens <a href="pics/l&d/approver.pdf">here</a>! 
 			</p>
 		</div>
 		</div>
