--- a/miles.html
+++ b/miles.html
@@ -32,9 +32,9 @@
 		<div id="miles" class="margin-medium">
 
 		<div class="title-wrapper animate-reveal animate-first">
-	  	<div class="page-title">MILES</div> 
+	  	<div class="header">MILES</div> 
 	  	<div class="last"> <div class="short-divider"></div></div>
-	  	<div class="project-info">
+	  	<div class="subheader-2">
 	  		Fall 2017 • Interaction Design Overview • <a href="https://www.youtube.com/watch?v=uT68SYJpt50">Video</a>
 	  	</div>
 	  	</div>
@@ -44,15 +44,15 @@
 	  	
 	  	<div class="content">
 			<div class="context-summary">
-			<div class="context-title">Context</div>
+			<div class="subheader-2">Context</div>
 				I worked on this project through, Interaction Design Overview (IxDO), a core class of the HCI minor. IxDO is a studio course that offers a broad overview of communication and interaction design, through which students learn design methodologies such as brainstorming, sketching, storyboarding, wire framing, and prototyping. The task was to design a conversational interface (e.g. Siri, Alexa) that would integrate with a self driving car. The assignment was left very open-ended, and we had jurisdiction over specific users to target and areas to focus on.
 			</div>
 			<div class="context-specifics">
-				<div class="context-subtitle">Team</div>
+				<div class="subheader-2">Team</div>
 				<div class="context-description">
 					I was placed in an interdisciplinary team of four.
 				</div>
-				<div class="context-subtitle">Skills</div> 
+				<div class="subheader-2">Skills</div> 
 				<div class="context-description">
 					User stories, Ecosystem collection, Competitive analysis, Scenarios, Usability testing
 				</div>
