--- a/newstagram.html
+++ b/newstagram.html
@@ -33,9 +33,9 @@
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 		
 		<div class="title-wrapper animate-reveal animate-first">
-	  	<div class="page-title">Newstagram</div>
+	  	<div class="header">Newstagram</div>
 	  	<div class="last"> <div class="short-divider"></div></div>
-	  	<div class="project-info">
+	  	<div class="subheader-2">
 	  		Spring 2018 • Social Web • <a href="https://adobe.ly/2FygOXL" target="_blank">View the Prototype</a>
 	  	</div>
 	  	</div>
@@ -45,7 +45,7 @@
 
 	  	<div class="content">
 			<div class="context-summary">
-			<div class="context-title">Context</div>
+			<div class="subheader-2">Context</div>
 			This was a project I worked on through Social Web, an elective HCI class that examines a sampling of the social, technical and business challenges social web sites must solve to be successful. 
 			<p>Through this project, my team aimed to gain a deeper understanding of why and how people use Instagram, how authenticity plays into social media, and how best to design a social media platform so that users feel like they are posting authentically.</p>
 			<p>The problem we identified is as follows: Instagram is intended to connect individuals, but more often that not, it is used to curate highly edited, illusory versions of themselves. People are not at fault for this. Rather, the platforms that enable and even promote this behavior are to blame.</p>
@@ -56,12 +56,12 @@
 			</div>
 			
 			<div class="context-specifics">
-				<div class="context-subtitle">Team</div>
+				<div class="subheader-2">Team</div>
 					<div class="context-description">
 					I worked in an interdisciplinary team of three: myself, another IS/HCI major, and a Business major.</div>
-				<div class="context-subtitle">Skills</div> 
+				<div class="subheader-2">Skills</div> 
 					<div class="context-description">Interviewing, Usability testing, Wireframing, Prototyping, Presenting</div>
-				<div class="context-subtitle">Tools</div> 
+				<div class="subheader-2">Tools</div> 
 					<div class="context-description">Adobe XD, Google Slides</div>
 			</div>
 	  	</div>
