--- a/salesforce.html
+++ b/salesforce.html
@@ -2,11 +2,10 @@
 <html>
 
   <head>
-    <title>Emily Porat | RSVPd</title>
-    <link rel="stylesheet" type="text/css" href="styles/global2.css">
+    <title>Emily Porat | Salesforce</title>
+    <link rel="stylesheet" type="text/css" href="styles/global.css">
+    <link rel="stylesheet" type="text/css" href="styles/global-mobile.css">
     <link rel="stylesheet" type="text/css" href="styles/nav.css">
-    <link rel="stylesheet" type="text/css" href="styles/rsvpd.css">
-    <link rel="stylesheet" type="text/css" href="styles/contact.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="pics/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -34,17 +33,17 @@
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	
 	  	<div class="title-wrapper animate-reveal animate-first">
-		  	<div class="page-title">Enterprise Salesforce Platform</div>
+		  	<div class="header">Enterprise Salesforce Platform</div>
 		  	<div class="last"> <div class="short-divider"></div></div>
-		  	<div class="project-info">Fall 2019 • Deloitte Digital
+		  	<div class="subheader-2 center">Fall 2019 • Deloitte Digital
 	  	</div>
 	  	</div>
 	  <!-- 	<img src="pics/rsvpd/cover2.png" class="big-pic animate-reveal animate-second" style="background-color: #ff943a"> -->
-	  	<div id="ld" class="margin-medium">
+	  	<div id="salesforce" class="margin-medium">
 
 	  	<div class="content">
 			<div class="context-summary">
-			<div class="context-title">Context</div>
+			<div class="subheader-2">Context</div>
 				<p>
 				I am currently working on a web app that helps a federal aid program manage its business operations. More information coming soon!
 				</p>
@@ -52,13 +51,13 @@
 			</div>
 			
 			<div class="context-specifics">
-				<div class="context-subtitle">Team</div>
+				<div class="subheader-2">Team</div>
 					<div class="context-description">
 					I was one of two designers on a large team of 20+ practitioners.</div>
-				<div class="context-subtitle">Skills</div> 
-					<div class="context-description">Wireframing, Visual Design</div>
-				<div class="context-subtitle">Tools</div> 
-					<div class="context-description">Sketch, PowerPoint</div>
+				<div class="subheader-2">Skills</div> 
+					<div class="context-description">Wireframing, Visual Design, Information Architecture, User Flows</div>
+				<div class="subheader-2">Tools</div> 
+					<div class="context-description">Sketch, Abstract, PowerPoint</div>
 			</div>
 		  	
 		  	<div class="panel last"> <div class="divider"></div> </div>
