--- a/upark.html
+++ b/upark.html
@@ -32,9 +32,9 @@
     <div id="nav"></div>
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 		<div class="title-wrapper animate-reveal animate-first">
-	  	<div class="page-title">UPark</div>
+	  	<div class="header">UPark</div>
 	  	<div class="last"> <div class="short-divider"></div></div>
-	  	<div class="project-info">Fall 2017 • Interaction Design Overview • <a href="https://xd.adobe.com/view/e6f7478c-22bb-4439-af47-3c3a3976e3d0/screen/0e7bd19b-2882-4232-8812-af53c774a6e8/Reservations-Upcoming/">Prototype</a></div>
+	  	<div class="subheader-2">Fall 2017 • Interaction Design Overview • <a href="https://xd.adobe.com/view/e6f7478c-22bb-4439-af47-3c3a3976e3d0/screen/0e7bd19b-2882-4232-8812-af53c774a6e8/Reservations-Upcoming/">Prototype</a></div>
 	  	</div>
 	  	
 	  	<img src="pics/upark/bigpic.jpg" class="big-pic animate-reveal animate-second">
@@ -42,7 +42,7 @@
 	  	
 	  	<div class="content">
 			<div class="context-summary">
-				<div class="context-title">Context</div>
+				<div class="subheader-2">Context</div>
 				This is a parking space sharing app that I worked on in Interaction Design Overview (IxDO), a core class of the HCI minor. IxDO is a studio course that offers a broad overview of communication and interaction design, through which students learn design methodologies such as brainstorming, sketching, storyboarding, wire framing, and prototyping.
 				<p>
 				We were handed off research and tasked with translating those insights into a mobile prototype. From the research, we found that homeowners and landlords want to securely utilize their vacant parking spaces, and students, commuters, and tourists want a convenient way to find affordable parking spaces near their schools or workplaces.</p>
@@ -55,7 +55,7 @@
 			</div>
 			
 			<div class="context-specifics">
-				<div class="context-subtitle">Team</div>
+				<div class="subheader-2">Team</div>
 					<div class="context-description">
 					I worked in an interdisciplinary team of four.
 					</div>
