--- a/zensors.html
+++ b/zensors.html
@@ -33,15 +33,15 @@
 
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
   	<div class="title-wrapper animate-reveal animate-first">
-    <div class="page-title">Zensors</div>
+    <div class="header">Zensors</div>
     <div class="last"> <div class="short-divider"></div></div>
-  	<div class="project-info">Spring 2018 • HCI Undergraduate Research • <a href="https://www.zensors.com/">Website</a></div>
+  	<div class="subheader-2">Spring 2018 • HCI Undergraduate Research • <a href="https://www.zensors.com/">Website</a></div>
     </div>
     <img src="pics/zensors/zensorsgray.jpg" class="big-pic animate-reveal animate-second">
   	<div id="zensors" class="margin-medium">
 	  	<div class="content">
 			<div class="context-summary">
-				<div class="context-title">Context</div>
+				<div class="subheader-2">Context</div>
 				<a href="https://www.zensors.com/">Zensors</a> is a startup that was born from a CMU HCI research project. I joined the team during my Junior spring as a UX Designer and Frontend Engineer.</p>
         <p>
         Zensors is a sensing platform that extracts data from existing camera feeds to help businesses and offices gain insight into what's going on in the spaces they own. It utilizes crowdsourcing and AI to answer questions about images. 
@@ -50,15 +50,15 @@
 			</div>
 			
 			<div class="context-specifics">
-				<div class="context-subtitle">Team</div>
+				<div class="subheader-2">Team</div>
 					<div class="context-description">
 					I worked with several developers and designers, most of whom were HCI Masters/PhD students.
 					</div>
-				<div class="context-subtitle">Skills</div> 
+				<div class="subheader-2">Skills</div> 
 				    <div class="context-description">
 					Personas, Scenarios, User Stories, Wireframing, Prototyping, Usability Testing
 					</div>
-				<div class="context-subtitle">Tools/Technology</div> 
+				<div class="subheader-2">Tools/Technology</div> 
 					<div class="context-description">
 					Adobe XD, React, TypeScript, HTML/CSS
 					</div>
