finalized proj pages

--- a/atlantis.html
+++ b/atlantis.html
@@ -3,6 +3,8 @@
 
   <head>
     <title>Emily Porat | Atlantis Hub</title>
+    <link rel="stylesheet" type="text/css" href="styles/global.css">
+    <link rel="stylesheet" type="text/css" href="styles/global-mobile.css">
     <link rel="stylesheet" type="text/css" href="styles/global2.css">
     <link rel="stylesheet" type="text/css" href="styles/nav.css">
     <link rel="stylesheet" type="text/css" href="styles/atlantis.css">
@@ -34,7 +36,7 @@
 	<div class="title-wrapper animate-reveal animate-first">
   	<div class="header">Atlantis Hub</div>
   	<div class="last"> <div class="short-divider"></div></div>
-  	<div class="subheader-2">
+  	<div class="subheader-2 center">
   		Fall 2017 • Interaction Design Overview • <a href="https://www.youtube.com/watch?v=gH_H0uQTa00&feature=youtu.be" target="_blank">Video</a>
   	</div>
   	</div>
@@ -170,8 +172,8 @@
 				<p>4) Icons are used for easy identification of transport methods.</p>
 			  </div>
 			</div>
-		  	<a href="justharvest.html" class="next-project" style="background-color: #FEE469; float: right; color: black"> 
-		  		COMMUNITY TABLE >
+		  	<a href="salesforce.html" class="next-project" style="background-color: #FEE469; float: right; color: black"> 
+		  		SALESFORCE >
 		  	</a>
 
 		  	<a href="miles.html" class="next-project" style="background-color: #FEE469; float: left; color: black"> 
