--- a/chutzpow.html
+++ b/chutzpow.html
@@ -3,10 +3,11 @@
  
   <head>
     <title>Emily Porat | Chutz-Pow!</title>
-   <link rel="stylesheet" type="text/css" href="styles/global2.css">
+    <link rel="stylesheet" type="text/css" href="styles/global.css">
+    <link rel="stylesheet" type="text/css" href="styles/global-mobile.css">
+   	<link rel="stylesheet" type="text/css" href="styles/global2.css">
     <link rel="stylesheet" type="text/css" href="styles/nav.css">
     <link rel="stylesheet" type="text/css" href="styles/chutzpow.css">
-    <link rel="stylesheet" type="text/css" href="styles/contact.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="pics/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -33,7 +34,7 @@
   	<div class="title-wrapper animate-reveal animate-first">
   	<div class="header">Chutz-Pow!</div>
   	<div class="last"> <div class="short-divider"></div></div>
-  	<div class="subheader-2">
+  	<div class="subheader-2 center">
   		Spring 2018 • Information Systems Consulting Project • <a href="http://www.chutz-pow.org" target="_blank" ">Website</a>
   	</div>
   	</div>
@@ -41,8 +42,6 @@
   	<img src="pics/chutzpow/titlegreen.png" class="big-pic animate-reveal animate-second">
 
   	<div id="chutzpow" class="margin-medium">
-
-  		
 
 	  	<div class="content">
 			
