--- a/l&d.html
+++ b/l&d.html
@@ -238,10 +238,14 @@
 		</div>
 		</div>
 
+		<div class="panel last"><div class="divider"></div></div>
+
 		<div class="panel dark">
 			<img src="pics/l&d/bpm1.jpg" class="pic-left" style="width: 80%; margin: 10%; margin-bottom: 0%">
 			<img src="pics/l&d/bpm2.jpg" class="pic-left" style="width: 80%; margin: 10%">
 		</div>
+
+		<div class="panel last"><div class="divider"></div></div>
 
 		<div class="panel">
 		<div class="subheader-3 left">Wireframes</div>
@@ -272,6 +276,8 @@
 		  		<div class="triple-pics"><img class="pic-right" src="pics/l&d/wire-expenses.jpg"></div>
 		  	</div>
 
+		<div class="panel last"><div class="divider"></div></div>
+
 		<div class="panel">
 		<div class="subheader-3 left">Visual Design</div>
 			
@@ -284,12 +290,14 @@
 		</div>
 		</div>
 
-		  	<a href="rsvpd.html" class="next-project" style="background-color: #49ce5c; float: right"> 
-		  		RSVP'D >
+		<div class="panel last"><div class="divider"></div></div>
+
+		  	<a href="chutzpow.html" class="next-project" style="background-color: #49ce5c; float: right"> 
+		  		CHUTZ-POW >
 		  	</a>
 
-		  	<a href="salesforce.html" class="next-project" style="background-color: #49ce5c; float: left"> 
-		  		< SALESFORCE
+		  	<a href="justharvest.html" class="next-project" style="background-color: #49ce5c; float: left"> 
+		  		< COMMUNITY TABLE
 		  	</a>
 	  	</div>
   	</div>
