--- a/miles.html
+++ b/miles.html
@@ -3,6 +3,8 @@
 
   <head>
     <title>Emily Porat | Miles</title>
+    <link rel="stylesheet" type="text/css" href="styles/global.css">
+    <link rel="stylesheet" type="text/css" href="styles/global-mobile.css">
     <link rel="stylesheet" type="text/css" href="styles/global2.css">
     <link rel="stylesheet" type="text/css" href="styles/nav.css">
     <link rel="stylesheet" type="text/css" href="styles/miles.css">
@@ -34,7 +36,7 @@
 		<div class="title-wrapper animate-reveal animate-first">
 	  	<div class="header">MILES</div> 
 	  	<div class="last"> <div class="short-divider"></div></div>
-	  	<div class="subheader-2">
+	  	<div class="subheader-2 center">
 	  		Fall 2017 • Interaction Design Overview • <a href="https://www.youtube.com/watch?v=uT68SYJpt50">Video</a>
 	  	</div>
 	  	</div>
