--- a/nav.html
+++ b/nav.html
@@ -1,7 +1,7 @@
 <div id="my-nav" class="nav-colored">
 	<a class="nav-logo" href="index.html">EMILY PORAT</a> 
 	<div id="nav-items">   
-		<a class="nav-item" id="home-nav-item" href="index.html" onclick="toggleNav()">HOME</a>
+		<a class="nav-item" id="home-nav-item" href="index.html" onclick="toggleNav()">PROJECTS</a>
 		<a class="nav-item" href="about.html" onclick="toggleNav()">ABOUT</a>
 		<a class="nav-item" href="resume.pdf" target="_blank" onclick="toggleNav()">RÈSUMÈ</a>
 	</div>
