--- a/salesforce.html
+++ b/salesforce.html
@@ -67,12 +67,12 @@
 
 
 	  	</div>
-		  	<a href="l&d.html" class="next-project" style="background-color: #9AC1F5; float: right"> 
-		  		L&D PORTAL >
+		  	<a href="rsvpd.html" class="next-project" style="background-color: #9AC1F5; float: right"> 
+		  		RSVP'D >
 		  	</a>
 
-		  	<a href="justharvest.html" class="next-project" style="background-color: #9AC1F5; float: left"> 
-		  		< COMMUNITY TABLE
+		  	<a href="atlantis.html" class="next-project" style="background-color: #9AC1F5; float: left"> 
+		  		< ATLANTIS
 		  	</a>
 	  	</div>
   	</div>
