--- a/archive.html
+++ b/archive.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles/global-mobile.css">
     <link rel="stylesheet" type="text/css" href="styles/nav.css">
     <link rel="stylesheet" type="text/css" href="styles/projects.css">
+    <link rel="stylesheet" type="text/css" href="styles/archive.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="pics/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -35,7 +36,7 @@
 	
 	<div class="margin-medium">
 
-        <div class="header">All projects</div>
+        <div class="title-wrapper"><div class="header">All projects</div></div>
 
         <div class="subheader-2" style="padding-top: 8vh">2019</div>
         <div id="projects">
