--- a/upark.html
+++ b/upark.html
@@ -3,10 +3,11 @@
 
   <head>
     <title>Emily Porat | UPark</title>
+    <link rel="stylesheet" type="text/css" href="styles/global.css">
+    <link rel="stylesheet" type="text/css" href="styles/global-mobile.css">
    <link rel="stylesheet" type="text/css" href="styles/global2.css">
     <link rel="stylesheet" type="text/css" href="styles/nav.css">
     <link rel="stylesheet" type="text/css" href="styles/upark.css">
-    <link rel="stylesheet" type="text/css" href="styles/contact.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="pics/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -34,7 +35,7 @@
 		<div class="title-wrapper animate-reveal animate-first">
 	  	<div class="header">UPark</div>
 	  	<div class="last"> <div class="short-divider"></div></div>
-	  	<div class="subheader-2">Fall 2017 • Interaction Design Overview • <a href="https://xd.adobe.com/view/e6f7478c-22bb-4439-af47-3c3a3976e3d0/screen/0e7bd19b-2882-4232-8812-af53c774a6e8/Reservations-Upcoming/">Prototype</a></div>
+	  	<div class="subheader-2 center">Fall 2017 • Interaction Design Overview • <a href="https://xd.adobe.com/view/e6f7478c-22bb-4439-af47-3c3a3976e3d0/screen/0e7bd19b-2882-4232-8812-af53c774a6e8/Reservations-Upcoming/">Prototype</a></div>
 	  	</div>
 	  	
 	  	<img src="pics/upark/bigpic.jpg" class="big-pic animate-reveal animate-second">
