--- a/zensors.html
+++ b/zensors.html
@@ -3,10 +3,11 @@
 
   <head>
     <title>Emily Porat | Zensors</title>
-   <link rel="stylesheet" type="text/css" href="styles/global2.css">
+    <link rel="stylesheet" type="text/css" href="styles/global.css">
+    <link rel="stylesheet" type="text/css" href="styles/global-mobile.css">
+    <link rel="stylesheet" type="text/css" href="styles/global2.css">
     <link rel="stylesheet" type="text/css" href="styles/nav.css">
     <link rel="stylesheet" type="text/css" href="styles/zensors.css">
-    <link rel="stylesheet" type="text/css" href="styles/contact.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="pics/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -35,7 +36,7 @@
   	<div class="title-wrapper animate-reveal animate-first">
     <div class="header">Zensors</div>
     <div class="last"> <div class="short-divider"></div></div>
-  	<div class="subheader-2">Spring 2018 • HCI Undergraduate Research • <a href="https://www.zensors.com/">Website</a></div>
+  	<div class="subheader-2 center">Spring 2018 • HCI Undergraduate Research • <a href="https://www.zensors.com/">Website</a></div>
     </div>
     <img src="pics/zensors/zensorsgray.jpg" class="big-pic animate-reveal animate-second">
   	<div id="zensors" class="margin-medium">
